Reset editor styles to fix broken layout
- Clear problematic styles that were targeting generic Tailwind classes
- .relative margin-top: -99px was hiding the image slider
- Generic class selectors like .text-center affected unintended elements
- Site layout restored to normal

--- a/app/editor-styles.css
+++ b/app/editor-styles.css
@@ -1,10 +1,2 @@
 /* Visual Editor Styles - Auto-generated */
 
-@media (min-width: 768px) {
-  .flex {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    margin-top: 172px;
-  }
-
-}
